# Kasana

./: .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260716_0001_initial_katalog.py  20260717_0002_library_root_administration.py  20260718_0003_metadata_matching.py  20260718_0004_attached_pictures.py  20260718_0005_episode_child_identity.py  20260718_0006_playback_sessions.py  20260718_0007_collection_management.py  20260719_0008_durable_maintenance_jobs.py  20260719_0009_hierarchy_repair_audit.py  20260719_0010_media_sidecar_attachments.py  20260722_0011_kanvas_profiles.py  20260722_0012_library_item_edits.py  20260722_0013_folded_katalog.py
docs/: architecture.md
src/kasana/: __init__.py  __main__.py  cli.py  configuration.py
src/kasana/kanvas/: __init__.py  __main__.py  dashboard.py  ffmpeg.py  playback_compatibility.py  profiles.py  settings.py
src/kasana/katalog/: __init__.py  __main__.py  admin.py  backend.py  backup.py  client.py  container.py  database.py  models.py  parsing.py  probe.py  public.py  repair.py  security.py  services.py  settings.py  user_configuration.py
src/kasana/kestrel/: __init__.py  __main__.py  cli.py  doctor.py  launch.py  mpv.py  player.py  presentation.py  settings.py  uri.py
src/kasana/kourier/: __init__.py  __main__.py  (+3 more)
tests/: browser_library_grid_runner.js  test_architecture_boundaries.py  test_british_spellings.py  test_browser_library_grid.py  test_browser_playback_compatibility.py  test_concurrency.py  test_configuration.py  test_entry_points.py  test_kanvas.py  test_katalog_api.py  test_katalog_backup.py  test_katalog_cli.py  test_katalog_collections.py  test_katalog_metadata.py  test_katalog_persistence.py  test_katalog_playback.py  test_katalog_repair.py  test_katalog_scanner.py  test_kestrel_launch.py  test_kestrel_player.py  test_kestrel_uri_doctor_cli.py  test_kourier_tmdb.py  test_migration_contract.py  test_profiles.py  test_public_contracts.py  test_settings.py  test_top_level_cli.py  test_user_configuration.py
(+77 files in other folders)
